--- a/src/styles/tree.css
+++ b/src/styles/tree.css
@@ -4,7 +4,6 @@
   margin: 0;
   padding: 0;
   background: #373737;
-  overflow: hidden;
   font-family: "Monospaced Number", "Chinese Quote", -apple-system,
     BlinkMacSystemFont, "Segoe UI", Roboto, "PingFang SC", "Hiragino Sans GB",
     "Microsoft YaHei", "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -12,11 +11,20 @@
   line-height: 21px;
 }
 
+.treeview {
+  overflow: 'auto';
+}
+
 .treeview > .toggle {
   pointer-events: all;
   cursor: pointer;
 }
+
 .treeview > .toggle:hover {
   color: lime;
   fill: lime;
+}
+
+.treeview button {
+  font-size: 10px;
 }
