--- a/src/App.css
+++ b/src/App.css
@@ -37,26 +37,6 @@
   }
 }
 
-.fileInput::-webkit-file-upload-button {
-  visibility: hidden;
-}
-.fileInput::before {
-  content: "Select some files";
-  display: inline-block;
-  background: -webkit-linear-gradient(top, #f9f9f9, #e3e3e3);
-  border: 1px solid #999;
-  border-radius: 3px;
-  padding: 5px 8px;
-  outline: none;
-  white-space: nowrap;
-  cursor: pointer;
-  text-shadow: 1px 1px #fff;
-  font-weight: 700;
-  font-size: 10pt;
-}
-.fileInput:hover::before {
-  border-color: black;
-}
-.fileInput:active::before {
-  background: -webkit-linear-gradient(top, #e3e3e3, #f9f9f9);
+.file-input {
+  display: none;
 }
