--- a/src/styles/tree.css
+++ b/src/styles/tree.css
@@ -4,9 +4,9 @@
   margin: 0;
   padding: 0;
   background: #373737;
-  font-family: "Monospaced Number", "Chinese Quote", -apple-system,
-    BlinkMacSystemFont, "Segoe UI", Roboto, "PingFang SC", "Hiragino Sans GB",
-    "Microsoft YaHei", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: 'Monospaced Number', 'Chinese Quote', -apple-system,
+    BlinkMacSystemFont, 'Segoe UI', Roboto, 'PingFang SC', 'Hiragino Sans GB',
+    'Microsoft YaHei', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-size: 14px;
   line-height: 21px;
 }
