--- a/docs/index.css
+++ b/docs/index.css
@@ -145,5 +145,15 @@ template {
 [hidden] {
   display: none;
 }
+
+/* src/index.css */
+body {
+  overscroll-behavior: none;
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  maxHeight: 100%;
+}
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /*# sourceMappingURL=index.css.map */
