--- a/docs/index.css
+++ b/docs/index.css
@@ -1,9 +1,2 @@
-/* src/index.css */
-body {
-  overscroll-behavior: none;
-  overflow: hidden;
-  padding: 0;
-  height: 100%;
-  max-height: 100%;
-}
+body{overscroll-behavior:none;overflow:hidden;padding:0;height:100%;max-height:100%}
 /*# sourceMappingURL=index.css.map */
