--- a/docs/index.css
+++ b/docs/index.css
@@ -1,2 +1,13 @@
-body{overscroll-behavior:none;overflow:hidden;padding:0;height:100%;max-height:100%}a{color:inherit;text-decoration:inherit}
+/* src/index.css */
+body {
+  overscroll-behavior: none;
+  overflow: hidden;
+  padding: 0;
+  height: 100%;
+  max-height: 100%;
+}
+a {
+  color: inherit;
+  text-decoration: inherit;
+}
 /*# sourceMappingURL=index.css.map */
