--- a/docs/index.css
+++ b/docs/index.css
@@ -1,13 +1,2 @@
-/* src/index.css */
-body {
-  overscroll-behavior: none;
-  overflow: hidden;
-  padding: 0;
-  height: 100%;
-  max-height: 100%;
-}
-a {
-  color: inherit;
-  text-decoration: inherit;
-}
+body{overscroll-behavior:none;overflow:hidden;padding:0;height:100%;max-height:100%}a{color:inherit;text-decoration:inherit}
 /*# sourceMappingURL=index.css.map */
