--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,18 @@ a {
   color: inherit;
   text-decoration: inherit;
 }
+
+
+/** vyzn overwrites start **/
+#root > div > div:nth-child(2) > div:nth-child(4) > div > div:nth-child(3) > div:nth-child(1) > button {
+  display: none !important;
+}
+
+#root > div > div:nth-child(2) > div > div > form > div:nth-child(1) > div > button {
+  display: none !important;
+}
+
+#root > div > div:nth-child(2) > div:nth-child(4) > div > div:nth-child(5) > div:nth-child(2) > div > button {
+  display: none !important;
+}
+/** vyzn overwrites end **/
