--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,18 @@
+*::-webkit-scrollbar {
+  width: 8px;
+}
+
+*::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 4px #fefefe;
+  border-radius: 4px;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #fefefe;
+  outline: 1px solid #fefefe;
+  border-radius: 4px;
+}
+
 body {
   overscroll-behavior: none;
   overflow: hidden;
