--- a/public/index.css
+++ b/public/index.css
@@ -3,13 +3,13 @@
 }
 
 *::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 4px #fefefe;
+  box-shadow: inset 0 0 4px green;
   border-radius: 4px;
 }
 
 *::-webkit-scrollbar-thumb {
-  background-color: #fefefe;
-  outline: 1px solid #fefefe;
+  background-color: green;
+  outline: 1px solid green;
   border-radius: 4px;
 }
 
